# intelligent-data-structurer

./: README.md  check_mongo.py  claude_ontology_cache.db  concept_drift.db  content_learning.db  debug_main.py  debug_similarity.py  demo_queries.py  fix_classification.py  main.py  main_old.py  monitor_nfl_upload.py  organic_demo.py  organic_main.py  pyproject.toml  reprocess_nfl_schedules.py  requirements-basic.txt  requirements.txt  reset_database_fresh_start.py  seed_database.py  setup.py  simple_main.py  simple_processor.py  taxonomy_manager.db  test_business_classifier.py  test_classification.py  test_cleaning.py  test_clustering.py  test_contact.txt  test_hierarchical_collections.py  test_intelligent_system.py  test_organic.py  test_semantic_enrichment.py  test_sports.txt  test_staging_threshold.py  test_upload.py  trigger_collection_processing.py  trigger_seed.py  view_documents.py
core/: business_classifier.py  business_document_types.py  classifier.py  claude_ontology_analyzer.py  concept_drift_detector.py  config.py  database.py  document_processor.py  dynamic_taxonomy_manager.py  enhanced_analyzer.py  extractors.py  intelligent_analyzer.py  intelligent_collection_engine.py  mongo_database.py  openai_classifier.py  organic_collections.py  semantic_analyzer.py  semantic_enrichment.py
sample_business_docs/: business_email_001.txt  contract_001.txt  expense_report_001.txt  expense_report_new_001.txt  expense_report_new_002.txt  expense_report_new_003.txt  expense_report_new_004.txt  expense_report_trigger.txt  financial_statement_001.txt  inventory_report_001.txt  invoice_001.txt  invoice_002.txt  job_posting_001.txt  meeting_minutes_001.txt  memo_001.txt  nda_001.txt  performance_review_001.txt  project_plan_001.txt  proposal_001.txt  purchase_order_001.txt  (+6 more)
(+1 files in other folders)
