[project]
name = "intelligent-data-processor"
version = "0.1.0"
description = "Intelligent system for processing unstructured data"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "pymongo==4.10.1",
    "motor==3.7.1",
    "celery==5.3.4",
    "redis==5.0.1",
    "spacy==3.7.2",
    "torch==2.2.0",
    "transformers==4.35.2",
    "pydantic==2.5.1",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "pytest==7.4.3",
    "black==23.11.0",
    "isort==5.12.0",
    "openai>=1.93.0",
    "jinja2==3.1.2",
    "numpy==1.25.2",
    "pip>=25.1.1",
    "greenlet>=1.1.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
    "pytesseract==0.3.10",
    "opencv-python==4.8.1.78",
    "pillow==10.1.0",
    "aiofiles==23.2.1",
    "scikit-learn==1.3.2",
    "pandas==2.1.4",
    "python-dateutil==2.8.2",
    "typer==0.9.0",
    "pytest-asyncio==0.21.1",
]
